tests/baselines/reference/jsdocIllegalTags.errors.txt
/a.js(2,19): error TS1092: Type parameters cannot appear on a constructor declaration.
/a.js(6,18): error TS1093: Type annotation cannot appear on a constructor declaration.


==== /a.js (2 errors) ====
    class C {
        /** @template T */
                      ~
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
        constructor() { }
    }
    class D {
        /** @return {number} */
                     ~~~~~~
!!! error TS1093: Type annotation cannot appear on a constructor declaration.
        constructor() {}
    }
    